--- a/Fisker Inc Tweets.ipynb
+++ b/Fisker Inc Tweets.ipynb
@@ -1,3 +1,4 @@
+# importing the required libraries
 {
  "cells": [
   {
@@ -23,10 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'NNOWDxmPEMipaC1nneAEEVU3y'\n",
-    "api_key_secret = 'OsMQIeRa8WvpApNpEmqUHXWyeQXHjqxCtCCbYxgENbpsWT3bi6'\n",
-    "access_token = '930389811873157121-LHujClOQH2r8aDHjwFF1jgM0bq7RMpE'\n",
-    "access_secret = 'VFR0FAyZ0QTi1RdIF5Ui5i2PyxHVLVVx6QWAK2BgPw9kg'\n",
+    "api_key = '**********'\n",
+    "api_key_secret = ''**********'\n",
+    "access_token = ''**********'\n",
+    "access_secret = ''**********'\n",
     "\n",
     "auth = tweepy.OAuthHandler(api_key, api_key_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
