Update Fisker Inc Tweets.ipynb

--- a/Fisker Inc Tweets.ipynb
+++ b/Fisker Inc Tweets.ipynb
@@ -1,4 +1,4 @@
-importing the required libraries
+
 {
  "cells": [
   {
@@ -7,6 +7,7 @@ importing the required libraries
    "metadata": {},
    "outputs": [],
    "source": [
+    "importing the required libraries"
     "import pandas as pd \n",
     "import numpy as np\n",
     "import requests\n",
