Update Fisker Inc Tweets.ipynb

--- a/Fisker Inc Tweets.ipynb
+++ b/Fisker Inc Tweets.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importing the required libraries"
+    "importing the required libraries \n"
     "import pandas as pd \n",
     "import numpy as np\n",
     "import requests\n",
